--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:pratyushmallickc@Gmail.com" class="contact-link">pratyushmallickc@Gmail.com</a>
+              <a href="mailto:pratyushmallickc@gmail.com" class="contact-link">pratyushmallickc@Gmail.com</a>
             </div>
 
           </li>
