--- a/index.html
+++ b/index.html
@@ -786,4 +786,8 @@
 
 </body>
 
+  <section class="footer">
+    <footer>&copy; 2024 Pratyush Mallick. All rights reserved.</footer>
+  </section>
+
 </html>
